Started with xval discussion

--- a/SpatialSmoothing.ipynb
+++ b/SpatialSmoothing.ipynb
@@ -1345,7 +1345,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "In the above, note how the pattern of uncertainty in $\\sigma_{post}$ tracks the lack of observations (indicated by the red areas in $\\sigma_{hires}$ and $\\sigma_{lores}$)."
+      "In the above, note how the pattern of uncertainty in $\\sigma_{post}$ tracks the lack of observations (indicated by the red areas in $\\sigma_{hires}$ and $\\sigma_{lores}$). Let's see how the per-pixel uncertainties are distributed. It is intersting to note that if we had two high resolution images, each of them with uncertainties given by $\\sigma_{hires}$ and $\\sigma_{lores}$, the combined uncertainty (under the conditions of independence) $\\sigma_{theory}^{-2}=\\sigma_{hires}^{-2} + \\sigma_{lores}^{-2}$, which in this case results in $\\sigma_{theory}\\sim0.12$. This means that we can assess the effect of uncertainty reduction obtained by using the Markov Random Field:"
      ]
     },
     {
@@ -1386,23 +1386,21 @@
      "prompt_number": 118
     },
     {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "1/((1./0.15**2) + (1./0.2**2))"
-     ],
-     "language": "python",
+     "cell_type": "heading",
+     "level": 2,
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "pyout",
-       "prompt_number": 93,
-       "text": [
-        "0.0144"
-       ]
-      }
-     ],
-     "prompt_number": 93
+     "source": [
+      "Choosing $\\gamma$ or $\\sigma_{model}$ without the truth"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Using synthetic data, it is quite convenient to compare the value of the inference as a function of $\\gamma$ (equivalently, $\\sigma_{model}$) and decide which one gives the \"best\" representation of the truth. In practice, this truth is not available. One way we can go about solving this problem is by using *crossvalidation*. In generalised crossvalidation (GCV), we sequentially remove an observation and use the rest of the data set to predict it as a function of the regularisation parameter. After this exercise has been carried out with all observations, one can calculate the best value of the regularisation parameter to use. Note that expressions for the efficient calculation of GCV are available.\n",
+      "\n",
+      "Similarly, one could just select subsets of observations, split them into \"training\" and \"validation\", and train on one set and predict the other validation sets (as a function of regularisation parameter). This is k-fold crossvalidation and is similar to jackknifing."
+     ]
     },
     {
      "cell_type": "code",
