--- a/SpatialSmoothing.ipynb
+++ b/SpatialSmoothing.ipynb
@@ -42,6 +42,15 @@
      ]
     },
     {
+     "cell_type": "heading",
+     "level": 2,
+     "metadata": {},
+     "source": [
+      "Jose G\u00f3mez-Dans (UCL & NCEO)\n",
+      "j.gomez-dans@ucl.ac.uk"
+     ]
+    },
+    {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
